# inspect-degradation

./: .gitignore  CHANGELOG.md  DESIGN.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: release.yml  test.yml
data/trail_sample/: annot.json  swe_annot.json  swe_trace.json
scripts/: power_analysis.py  validate_grader.py
src/inspect_degradation/: __init__.py  _registry.py  experiment.py  schema.py  step_phase.py  store.py  trace.py
src/inspect_degradation/analysis/: __init__.py  autocorrelation.py  cascade_chains.py  change_point.py  frame.py  from_eval_log.py  loops.py  measurement_error.py  mixed_effects.py  multiple_comparisons.py  power.py  rates.py  slopes.py  statistics.py  survival.py
src/inspect_degradation/datasets/: __init__.py  autoswe.py  moatless.py  multi_swebench.py  nebius.py  openhands.py  swe_smith.py  terminus.py  trail.py
src/inspect_degradation/grader/: __init__.py  drift_canary.py  ensemble.py  interface.py  llm.py  response.py  rubric.py
src/inspect_degradation/integration/: __init__.py  metrics.py  scorer.py  trace_adapter.py
src/inspect_degradation/prompts/: step_grader_v1.yaml  step_grader_v2.1.yaml  step_grader_v2.yaml
src/inspect_degradation/validation/: __init__.py  agreement.py  invariance.py  irr.py  runner.py
tests/: conftest.py  test_agreement.py  test_autocorrelation.py  test_cascade_chains.py  test_chain_means.py  test_change_point.py  test_cox_survival.py  test_crossed_effects.py  test_drift_canary.py  test_ensemble.py  test_experiment.py  test_grader_interface.py  test_integration_metrics.py  test_invariance.py  test_irr.py  test_llm_grader.py  test_loops.py  test_measurement_error.py  test_mixed_effects.py  test_multiple_comparisons.py  test_power.py  test_rates.py  test_response.py  test_rubric.py  test_runner.py  test_schema.py  test_slopes.py  test_statistics.py  test_step_phase.py  test_store.py  test_survival.py  test_trace.py  test_trail_loader.py
